by ptiJo <ptiJo@noos.fr>.
----------------------------------------------------------------------
Thu Aug 21 23:18:23 2003                        Michael Jennings (mej)

A few cosmetic changes to the source code, and a fix for Debian Bug
#176274 reported by Gerhard Tonn <GerhardTonn@gammatau.de>.
----------------------------------------------------------------------
Thu Aug 21 23:51:12 2003                        Michael Jennings (mej)

Oops, that wasn't *quite* what I had in mind....
----------------------------------------------------------------------
Fri Aug 22 00:09:04 2003                        Michael Jennings (mej)

Had I done it right the first time, this would not have happened. >:I
----------------------------------------------------------------------
Sun Aug 24 11:07:54 2003                        Michael Jennings (mej)

I redid the options variables and constants to try and make things
more standardized, and to make room for future toggles as well.  This
should make David Lloyd a bit happier, 'cause now we can get his patch
in here. :)

Hopefully I didn't break anything....
----------------------------------------------------------------------
Mon Aug 25 21:08:20 2003                        Michael Jennings (mej)

Patch from David Lloyd <dmlloyd@tds.net>.  Removed the NO_BRIGHTCOLOR
and NO_BOLDOVERSTRIKE defines.  If you want to do NO_BRIGHTCOLOR, set
colors 8-16 the same as 0-7. :P  For bold overstrike, it's now an
option (--overstrike-bold).  There are also options to deactivate the
"bold" and "blink" attributes' setting of high-intensity colors, and
to allow non-default foreground colors to be bolded.
----------------------------------------------------------------------
Mon Oct 27 21:39:29 2003                        Michael Jennings (mej)

Changed -D/--desktop option to use EWMH-compliant desktop atom.

Add support for EWMH icon property.
----------------------------------------------------------------------